--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -19,8 +19,8 @@
 	font-display: swap;
 }
 @font-face {
-	font-family: 'Helvetica';
-  src: url('../fonts/Helvetica.ttf') format('opentype');
+	font-family: 'Coolvetica';
+  src: url('../fonts/Coolvetica.ttf') format('opentype');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
