--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -15,7 +15,7 @@
 }
 
 .hero-title {
-	font-family: HelveticaExtraCompressed, 'Helvetica Neue', Arial, sans-serif;
+	font-family: HelveticaExtraCompressed, 'Coolvetica Neue', Arial, sans-serif;
 	color: var(--gold);
 	font-size: 212px;
 	margin: 56px 0 10px 56px;
@@ -25,7 +25,7 @@
 }
 
 .hero-sub {
-	font-family: Helvetica, 'Helvetica Neue', Arial, sans-serif;
+	font-family: Coolvetica, 'Coolvetica Neue', Arial, sans-serif;
 	color: var(--red);
     font-size: 28px;
 	margin-left: 56px;
