--- a/good/components/header.html
+++ b/good/components/header.html
@@ -1,6 +1,8 @@
 <header class="site-header">
 	<nav class="main-nav">
 		<div class="nav-list">
+			<a href="/good/home" class="nav-link">Intelligentsia</a>
+
 			<a href="/good/home" class="nav-link">Home</a>
 			<a href="/good/news" class="nav-link">News</a>
 			<a href="/good/contact" class="nav-link">Contact Us</a>
@@ -9,4 +11,3 @@
 		<a href="/donate"><button class="nav-btn">Donate</button></a>
 	</nav>
 </header>
-
