--- a/good/css/good.css
+++ b/good/css/good.css
@@ -8,12 +8,14 @@
 	background: var(--bg);
 	min-height: 100%;
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
 	padding-top: 28px;
 	position: relative;
-	/* align-items: center; */
+	align-items: center;
+	padding: none;
+	margin: none;
 }
 
 .hero-title {
@@ -25,7 +27,7 @@
 	letter-spacing: 1px;
 	z-index: 1 !important;
 	font-size: 21vw;
-	/* text-align: center; */
+	align-items: center;
 }
 
 .hero-sub {
