--- a/good/css/header.css
+++ b/good/css/header.css
@@ -4,7 +4,8 @@
 	--black: #010001;
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 }
 
@@ -42,7 +43,7 @@ body {
 	color: var(--black);
 	text-decoration: none;
 	padding-left: 1rem;
-    padding-right: 1rem;
+	padding-right: 1rem;
 	letter-spacing: 0.6px;
 	z-index: 2;
 }
@@ -60,11 +61,17 @@ body {
 	border-radius: 28px;
 	font-size: 18px;
 	cursor: pointer;
-	box-shadow: 0 2px 0 rgba(0,0,0,0.06) inset;
+	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.06) inset;
 	position: absolute;
 	right: 56px;
 	top: 50%;
 	transform: translateY(-50%);
 }
 
+a {
+	transition: color 0.1s ease-in;
+}
 
+a:hover {
+	color: #EAA707 !important
+}
