--- a/good/components/header.html
+++ b/good/components/header.html
@@ -1,13 +1,17 @@
 <header class="site-header">
+
+	<head>
+		<link rel="stylesheet" href="css/nav.css">
+
+	</head>
 	<nav class="main-nav">
 		<div class="nav-list">
 			<a href="/good/home" class="nav-link">Intelligentsia</a>
-
 			<a href="/good/home" class="nav-link">Home</a>
 			<a href="/good/news" class="nav-link">News</a>
 			<a href="/good/contact" class="nav-link">Contact Us</a>
 			<a href="/good/about" class="nav-link" style="padding-right: 1rem;margin-right: 40px; ">About</a>
 		</div>
-		<a href="/donate"><button class="nav-btn">Donate</button></a>
+		<a href="/donate" style="color:white;"><button class="nav-btn">Donate</button></a>
 	</nav>
 </header>
