--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -1,10 +1,11 @@
 :root {
 	--bg: #FFEDDF;
 	--gold: #EAA707;
-	--red: #91080D;
+	--red: #90090C;
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 }
 
@@ -42,7 +43,7 @@ body {
 	color: #000;
 	text-decoration: none;
 	padding-left: 1rem;
-    padding-right: 1rem;
+	padding-right: 1rem;
 	letter-spacing: 0.6px;
 }
 
@@ -59,11 +60,9 @@ body {
 	border-radius: 28px;
 	font-size: 18px;
 	cursor: pointer;
-	box-shadow: 0 2px 0 rgba(0,0,0,0.06) inset;
+	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.06) inset;
 	position: absolute;
 	right: 56px;
 	top: 50%;
 	transform: translateY(-50%);
 }
-
-
