--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,7 +1,7 @@
 :root {
 	--bg: #FFEDDF;
 	--gold: #EAA707;
-	--red: #91080D;
+	--red: #90090C;
 }
 
 .hero {
@@ -21,16 +21,15 @@
 	margin: 56px 0 10px 56px;
 	line-height: 0.9;
 	font-weight: 500;
-    letter-spacing: 1px;
+	letter-spacing: 1px;
 }
 
 .hero-sub {
 	font-family: Coolvetica, 'Coolvetica Neue', Arial, sans-serif;
 	color: var(--red);
-    font-size: 28px;
+	font-size: 28px;
 	margin-left: 56px;
-    margin-top: 28px;
-    margin-bottom: 0;
+	margin-top: 28px;
+	margin-bottom: 0;
 	font-weight: 700;
 }
-
