--- a/good/css/header.css
+++ b/good/css/header.css
@@ -1,5 +1,5 @@
 :root {
-	--bg: #91080D;
+	--bg: #90090C;
 	--gold: #EAA707;
 	--black: #010001;
 }
@@ -79,12 +79,13 @@ a {
 a:hover {
 	color: #EAA707 !important
 }
+
 .site-header {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: var(--bg);
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+	position: sticky;
+	top: 0;
+	z-index: 1000;
+	background-color: var(--bg);
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .nav-list {
@@ -106,12 +107,13 @@ a:hover {
 }
 
 .nav-btn:hover {
-    color: white;
+	color: white;
 }
-.logo{
-  top: 28px;
-  left: 200px;
-  right: 20000px;
-  color: var(--gold);
-  font-size: 2rem;
+
+.logo {
+	top: 28px;
+	left: 200px;
+	right: 20000px;
+	color: var(--gold);
+	font-size: 2rem;
 }
