--- a/good/css/good_contact.css
+++ b/good/css/good_contact.css
@@ -3,7 +3,7 @@
 }
 :root {
 	--bg: #90090C;
-	--gold: #EAA707;
+	--gold: #FFEDDF;
 	--black: #010001;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .contact-sub {
-	color: var(--black);
+	color: var(--gold);
 	font-weight: 700;
     font-family: Helvetica;
 }
@@ -56,7 +56,7 @@
 
 .btn-primary {
 	display: inline-block;
-	background: var(--gold);
+	background: #EAA707;
 	color: var(--black);
 	padding: 10px 16px;
 	border-radius: 6px;
@@ -243,7 +243,7 @@
 }
 
 .file-btn {
-    background: var(--gold);
+    background: #EAA707;
     color: var(--black);
     padding: 10px 14px;
     border-radius: 8px;
@@ -260,7 +260,7 @@
     border-radius: 8px;
     font-size: 14px;
     color: #444;
-    min-height: 44px;
+    max-height: 1rem;
     display: flex;
     align-items: center;
 }
