--- a/frontend/css/donate.css
+++ b/frontend/css/donate.css
@@ -142,6 +142,13 @@ body[data-page="donate"] {
 .modal-overlay,
 .message-overlay {
     display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-overlay.open,
+.message-overlay.open {
+    display: flex;
 }
 
 @media (max-width: 800px) {
