--- a/good/css/good_contact.css
+++ b/good/css/good_contact.css
@@ -191,9 +191,9 @@
 	padding: 14px 16px;
 	border-radius: 10px;
 	border: 2px solid rgba(0,0,0,0.12);
-	background: rgba(255,255,255,0.02);
+	background:var(--gold);
 	color: var(--black);
-	font-size: 18px;
+	font-size: 14px;
 	font-family: Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 }
