--- a/good/css/good.css
+++ b/good/css/good.css
@@ -4,8 +4,8 @@ body{
 
 :root {
 	--bg: #90090C;
-	--gold: #FFEDDF;
-	--black: #010001;
+	--gold: #EAA707;
+	--black: #ffffff;
 }
 .hero {
 	background: var(--bg);
