--- a/good/css/good_news.css
+++ b/good/css/good_news.css
@@ -1,7 +1,7 @@
 :root {
-	--bg: #90090C;
-	--gold: #EAA707;
-	--black: #ffffff;
+    --bg: #90090C;
+    --gold: #EAA707;
+    --black: #ffffff;
 }
 
 body[data-page="news"] {
@@ -114,6 +114,7 @@ a {
 
 a:hover {
     text-align: underline;
+    color: #EAA707
 }
 
 strong {
