added chat page (needs markup)

--- a/good/components/header.html
+++ b/good/components/header.html
@@ -4,6 +4,7 @@
 		<a href="/good/home" class="nav-link logo">Intelligentsia</a>
 		<div class="nav-list" style="display:flex;gap:2rem;align-items:center;">
 			<!-- <a href="/good/home" class="nav-link">Home</a> -->
+			 <a href="/good/chat" class="nav-link">Chat</a>
 			<a href="/good/news" class="nav-link">News</a>
 			<a href="/good/contact" class="nav-link">Contact Us</a>
 			<a href="/good/about" class="nav-link" style="padding-right: 4rem;">About</a>
