--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -1,13 +1,12 @@
 <header class="site-header">
-	<nav class="main-nav">
-		<div class="nav-list">
+
+	<nav class="main-nav" style="display:flex;align-items:center;">
+		<div class="nav-list" style="display:flex;gap:2rem;align-items:center;">
 			<a href="/" class="nav-link">Home</a>
 			<a href="/news" class="nav-link">News</a>
-			<a href="contact" class="nav-link">Contact Us</a>
-			<a href="/about" class="nav-link" style="padding-right: 1rem;margin-right: 40px; ">About</a>
+			<a href="/contact" class="nav-link">Contact Us</a>
+			<a href="/about" class="nav-link" style="padding-right: 4rem;">About</a>
 		</div>
-		<a href="/donate"><button class="nav-btn">Donate</button></a>
-
+		<a href="/donate" style="color:white;"><button class="nav-btn">Donate</button></a>
 	</nav>
 </header>
-
