--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -1,6 +1,7 @@
 <header class="site-header">
 
 	<nav class="main-nav" style="display:flex;align-items:center;">
+		<img src="assets/Group 37.png" alt="" class="hero-img"><a href="/" class="nav-link logo">Intelligentsia</a>
 		<div class="nav-list" style="display:flex;gap:2rem;align-items:center;">
 			<a href="/" class="nav-link">Home</a>
 			<a href="/news" class="nav-link">News</a>
